--- a/consts/Main_window.ui
+++ b/consts/Main_window.ui
@@ -66,7 +66,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Выбрать файл</string>
+         <string>Выбрать папку</string>
         </property>
        </widget>
       </item>
@@ -133,6 +133,40 @@
      </layout>
     </item>
    </layout>
+  </widget>
+  <widget class="QListWidget" name="listWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>320</y>
+     <width>351</width>
+     <height>192</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Rubik</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>290</y>
+     <width>261</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Обработаны файлы:</string>
+   </property>
   </widget>
  </widget>
  <resources/>
